# code_obfuscation_research

./: .gitignore  AGENTS.md  README.md  TODO.md  gold.smoke_cold.json  gold.smoke_django.json  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
configs/dataset/: codeqa_python.yaml  codeqa_python_prepared.yaml  humaneval.yaml  humaneval_prepared.yaml
configs/eval/: default.yaml  humaneval.yaml
configs/evaluator/: deepeval_correctness.yaml  humaneval_exec.yaml
configs/judge_model/: openai_gpt5_4_mini.yaml  vllm_qwen3.yaml
configs/model/: openai_gpt5_4_nano.yaml  vllm_qwen3.yaml
configs/paths/: default.yaml
configs/perturbation/: noop.yaml  rename_symbols.yaml
configs/repo_obfuscation/: identity.yaml  rope_rename.yaml
configs/run/: default.yaml  humaneval.yaml  humaneval_prepared.yaml
configs/runtime/: default.yaml
configs/swebench/: default.yaml  docker_skip.yaml
configs/task/: codeqa.yaml  humaneval.yaml
docs/: xeval_report.md
docs/exps/: eval_walkthrough.md  run_walkthrough.md
docs/swe_task_impl/: deobfuscation_e2e_report.md  manual_test_report.md  stage_0_1_2_3_report.md  stage_4_5_6_manual_tests.md
scripts/: prepare_dataset.py  prepare_humaneval.py  run_evaluation.py  run_experiment.py  run_swebench.py
src/swe_task/: dataset.py  logging_config.py  pipeline.py  reporting.py
swebench_task/: .gitignore  AGENTS.md  README.md  TODO.md  __main__.py
swebench_task/agent/: runner.py
swebench_task/configs/: default.yaml  docker_skip.yaml  exp_identity_full.yaml  exp_identity_gpt_mini.yaml  exp_rope_rename_full.yaml  instance_order.yaml  (+3 more)
(+100 files in other folders)
